# relMT

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: github-deploy.yml  python-package.yml  python-publish.yml
docs/: conf.py  index.md
docs/_static/: custom.css
docs/api/: index.rst  relmt.align.rst  relmt.amp.rst  relmt.angle.rst  relmt.core.rst  relmt.default.rst  relmt.extra.rst  relmt.io.rst  relmt.ls.rst  relmt.main.rst  relmt.mt.rst  relmt.plot.rst  relmt.qc.rst  relmt.rst  relmt.signal.rst  relmt.utils.rst
docs/examples/: example1.md  index.md
docs/formats/: config.yaml  default-hdr.yaml  events.txt  exclude.yaml  file_formats.md  index.md  phases.txt  reference_mts.txt  stations.txt  units_coordinates.md
docs/getting_started/: index.md  installation.md  setup.md
docs/how-to/: admit.md  align.md  alignment.md  amplitude.md  config-template.yaml  default-hdr.yaml  formats.md  index.md  qc.md  setup.md  solve.md  synopsis.md
docs/usage/: usage.rst
examples/: example_0_setup_external_Pamir_data.ipynb  example_1a_setup_Pamir_Muji_aftershocks.ipynb  example_1b_align_Pamir_Muji_aftershocks.ipynb  example_1c_solve_Pamir_Muji_aftershocks.ipynb  example_1d_interpret_Pamir_Muji_aftershocks.ipynb
src/relmt/: align.py  amp.py  angle.py  core.py  default.py  extra.py  fftw3.f90  io.py  ls.py  main.py  mccc.py  mccore.f90  mt.py  plot.py  qc.py  signal.py  utils.py
tests/: conftest.py  lcov.info  test_align.py  test_amp.py  test_angle.py  test_core.py  test_extra.py  test_io.py  test_ls.py  test_main.py  test_mccc.py  test_mt.py  test_plot.py  test_qc.py  test_signal.py  test_utils.py
tests/data/: header_A.yaml  mvel.txt  skhash_maacama_example.txt  subcatalog_A.mats.npy  test-net.txt  test.hyp  test_ext_event_table.txt  test_ext_mt_table.txt
