[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"


[project]
name = "relmt"
version = "0.1a0"
description = "Software to compute relative earthquake moment tensors."
authors = [
    { name = "Wasja Bloch", email = "wasja@norsar.no" },
    { name = "Doriane Drolet", email = "ddrolet@eoas.ubc.ca" },
    { name = "Michael G. Bostock", email = "bostock@eoas.ubc.ca" },
]
maintainers = [{ name = "Wasja Bloch", email = "wasja@norsar.no" }]
readme = "README.md"
dependencies = ["numpy", "scipy", "pyyaml", "matplotlib", "obspy", "utm"]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/wasjabloch/relMT"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"

#[project.scripts]
#relmt =
