[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"


[project]
name = "relmt"

version = "0.3.1-beta"

description = "Software to compute relative earthquake moment tensors."

authors = [
  { name = "Wasja Bloch", email = "wasja@norsar.no" },
  { name = "Doriane Drolet", email = "ddrolet@eoas.ubc.ca" },
  { name = "Michael G. Bostock", email = "bostock@eoas.ubc.ca" },
]

maintainers = [{ name = "Wasja Bloch", email = "wasja@norsar.no" }]

readme = "README.md"

dependencies = ["numpy>=1.26", "scipy", "pyyaml"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]

# Plotting funtionalities
plot = ["matplotlib", "networkx", "pyrocko"]

# Waveform processing
extra = ["obspy", "multitaper", "utm", "pyrocko"]

# All the above, plus documentation and testing
dev = [
  "pytest",
  "coverage",
  "nbmake",
  "pre_commit",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
  "sphinx-markdown-tables",
  "sphinx-argparse",
  "pydata_sphinx_theme",
  "relmt[plot]",
  "relmt[extra]",
]

[project.urls]
Homepage = "https://github.com/wasjabloch/relMT"

[tool.mypy]
files = "src"
python_version = "3.10"
strict = false
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

# You can disable imports or control per-module/file settings here
[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"

[project.scripts]
relmt = "relmt.main:main"
